# gen-slides

./: .gitignore  App.tsx  README.md  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  types.ts  vite.config.ts
backend/: README.md  pyproject.toml  server.py
components/: App.tsx  ConfirmationModal.tsx  GlobalSettingsModal.tsx  Home.tsx  ImageSettingsModal.tsx  NewSlideModal.tsx  OutlineEditor.tsx  PresentationMode.tsx  PresenterView.tsx  Sidebar.tsx  SlideShow.tsx  SlideViewer.tsx  TestPage.tsx  ThemeSelector.tsx  ThemeToggle.tsx
services/: db.ts  geminiService.ts  themes.ts
src/: App.tsx  main.tsx  vite-env.d.ts
src/app/: AppLayout.tsx  ErrorBoundary.tsx
src/components/: AudienceWindow.tsx  Home.tsx  PresenterView.tsx  RegenerateModal.tsx  Sidebar.tsx  SlideThumbnails.tsx  ThemeMarketplace.tsx
src/config/: themes.yaml
src/contexts/: ThemeContext.tsx
src/pages/: AudiencePage.tsx  HomePage.tsx  OutlinePage.tsx  SlideshowPage.tsx
src/services/: db.ts
src/store/: draftSession.ts  usePresentationStore.ts
